@@ -1,7 +1,6 @@
 package edu.project3;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import org.junit.jupiter.api.Test;
@@ -14,11 +13,8 @@ public class LogFileAnalyzerTest {
             new String[] {"--path", "src/main/resources/project3/testLog/logs.txt", "--from", "2015-06-04", "--format",
                 "adoc"};
         LogFileAnalyzer logAnalyze = new LogFileAnalyzer(args);
-        assertThat(new String(Files.readAllBytes(logAnalyze.run(args)), StandardCharsets.UTF_8)).isEqualTo(new String(
-            Files.readAllBytes(Path.of(
-                "src/main/resources/project3/report/report.adoc")),
-            StandardCharsets.UTF_8
-        ));
+        assertThat(Files.readString(logAnalyze.run(args))).isEqualTo(Files.readString(Path.of(
+            "src/main/resources/project3/report/report.adoc")));
     }
 
     @Test
@@ -27,10 +23,7 @@ public class LogFileAnalyzerTest {
             new String[] {"--path", "src/main/resources/project3/testLog/logs.txt", "--to", "2015-06-04", "--format",
                 "markdown"};
         LogFileAnalyzer logAnalyze = new LogFileAnalyzer(args);
-        assertThat(new String(Files.readAllBytes(logAnalyze.run(args)), StandardCharsets.UTF_8)).isEqualTo(new String(
-            Files.readAllBytes(Path.of(
-                "src/main/resources/project3/report/REPORT.md")),
-            StandardCharsets.UTF_8
-        ));
+        assertThat(Files.readString(logAnalyze.run(args))).isEqualTo(Files.readString(Path.of(
+            "src/main/resources/project3/report/REPORT.md")));
     }
 }
